--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,34 @@
 @charset "UTF-8";
 @import '_colors';
 
+@font-face {
+	font-family: 'Graphik Web';
+	src: local('Graphik-Regular'), local('Graphik-Regular'),
+		url('./fonts/Graphik-Regular.woff2') format('woff2'),
+		url('./fonts/Graphik-Regular.woff') format('woff'),
+		url('./fonts/Graphik-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Graphik Web';
+	src: local('Graphik-Medium'), local('Graphik-Medium'),
+		url('./fonts/Graphik-Medium.woff2') format('woff2'),
+		url('./fonts/Graphik-Medium.woff') format('woff'),
+		url('./fonts/Graphik-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Graphik Web';
+	src: local('Graphik-Semibold'), local('Graphik-Semibold'),
+		url('./fonts/Graphik-Semibold.woff2') format('woff2'),
+		url('./fonts/Graphik-Semibold.woff') format('woff'),
+		url('./fonts/Graphik-Semibold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
 * {
    padding: 0px;
    margin: 0px;
@@ -101,7 +129,7 @@ h6 {
 
 body {
    color: $text;
-   font-size: 14px;
+   font-size: 15px;
 }
 
 body.lock {
