--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,6 +1,6 @@
-$main: #e44332;
+$main: #f7b84f;
 $text: #1f1f1f;
 $smalltext: #575757;
 $links: #316fea;
-$decor: #f7b84f;
+$decor: #e44332;
 $separators: rgba(0,0,0,0.14);
