--- a/src/index.scss
+++ b/src/index.scss
@@ -84,6 +84,13 @@ input::-ms-clear {
    display: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+	transition: background-color 5000s ease-in-out 0s;
+}
+
 button {
    cursor: pointer;
 	background: none;
